--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-
   <header class="main">
     <h4>Меня зовут Анастасия Мухина</h4>
     <h1>Я web-разработчик из города Саратов</h1>
@@ -14,8 +13,11 @@
       <a href="#about-me">Про меня</a>
     </nav>
   </header>
+
+
   <article class="all-info">
   <section class="about-me" id="about-me">
+    <img src="src/pic1.jpg" alt="Красивая картинка 1" class="main_img">
     <div class="menu_container">
       <div class="menu_container_circle">
         <div class="orange-circle">
@@ -27,36 +29,28 @@
       </div>
     </div>
     <div class="about-me_main-info">
-      <p>Личные качества: ответственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту, организованность.
-       <p>Хобби: в свободное время я занимаюсь плаванием и танцами, развожу домашние растения, увлекаюсь настольными и компьютерными играми, в холодное время года катаюсь на лыжах и сноуборде.
+      <p>Меня зовут Мухина Анастасия Алексеевна, мне 21 год, дата рождения: 28.01.2001. Адрес проживания: г. Саратов, ул. Мамонтовой, д.5, кв. 32.
     </div>
     <div class="about-me_work-info">
       <div class="container">
         <div class="orange-circle">
         </div>
         <div class="container_text">
-          <h5>Block 1</h5>
-          <p>Info 1
+          <h5>Личные качества</h5>
+          <p>Ответственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту, организованность.
         </div>
       </div>
       <div class="container">
         <div class="orange-circle">
         </div>
         <div class="container_text">
-          <h5>Block 2</h5>
-          <p>Info 2
-        </div>
-      </div>
-      <div class="container">
-        <div class="orange-circle">
-        </div>
-        <div class="container_text">
-          <h5>Block 3</h5>
-          <p>Info 3
+          <h5>Хобби</h5>
+          <p>В свободное время я занимаюсь плаванием и танцами, развожу домашние растения, увлекаюсь настольными и компьютерными играми, в холодное время года катаюсь на лыжах и сноуборде.
         </div>
       </div>
     </div>
   </section>
+
 
   <section class="experience" id="experience">
     <div class="menu_container">
@@ -144,6 +138,7 @@
     </div>
   </section>
 
+
   <section class="skills" id="skills">
     <div class="menu_container">
       <div class="menu_container_circle">
@@ -157,29 +152,30 @@
     </div>
     <div class="skills_container">  
       <div class="skills_html">
-        <img src="src/html-pic.jpg">
+        <img src="src/html-pic.jpg" alt="html" class="skills_img">
         <p>HTML5
         <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированнную структуру вашего продукта.
       </div>
       <div class="skills_css">
-        <img src="src/css-pic.jpg">
+        <img src="src/css-pic.jpg" alt="css" class="skills_img">
         <p>CSS3
         <p>Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!
       </div>
       <div class="skills_js">
-        <img src="src/js-pic.jpg">
+        <img src="src/js-pic.jpg" alt="javaScript" class="skills_img">
         <p>Java Script
         <p>Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое
       </div>
       <div class="skills_react">
-        <img src="src/react-pic.jpg">
+        <img src="src/react-pic.jpg" alt="React" class="skills_img">
         <p>React
         <p>Эта библиотека пзволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели.
       </div>
     </div>
   </section>
 
-  <section class="portfolio" id="portfolio">
+
+<section class="portfolio" id="portfolio">
     <div class="menu_container">
       <div class="menu_container_circle">
         <div class="orange-circle">
@@ -190,9 +186,17 @@
       <div class="orange-line">
       </div>
     </div>
-  </section>
+    <div class="portfolio_works">
+    <img src="src/TravelCatalog.jpg" alt="TravelCatalog" class="portfolio_works_img">
+    <img src="src/BotTransport.jpg" alt="BotTransport" class="portfolio_works_img">
+    <img src="src/Picture1.jpg" alt="Красивая картинка 1" class="portfolio_works_img">
+    <img src="src/Picture2.jpg" alt="Красивая картинка 2" class="portfolio_works_img">
+    </div>
+  </section>  
+
 
   <section class="contacts" id="contacts">
+    <img src="src/pic1.jpg" alt="Красивая картинка 2" class="main_img">
     <div class="menu_container">
       <div class="menu_container_circle">
         <div class="orange-circle">
@@ -204,7 +208,7 @@
       </div>
     </div>
     <div class="contacts_media">
-      <h5>Социальные сети:</h5>
+      <h4>Социальные сети:</h4>
       <a href = "https://vk.com/ancstwi"><img src = "src/vk.png" alt="Вконтакте"></a>
       <a href = "https://t.me/ancstwi"><img src = "src/telegram.png" alt="Телеграмм"></a>
       <a href = "https://www.instagram.com/ancstwi"><img src = "src/instagram.png" alt="Инстаграм"></a>
@@ -212,7 +216,7 @@
       <a href = "https://youtu.be/dQw4w9WgXcQ"><img src = "src/youtube.png" alt="Ютуб"></a>
     </div>
     <div class="contacts_call-me">
-      <h5>Как со мной связаться:</h5>
+      <h4>Как со мной связаться:</h4>
       <ul class="contacts_call-me_ul">
         <li>Телефон: 89170245787</li>
          <li>Почта: nastmukh@gmail.com</li>
@@ -220,5 +224,32 @@
     <div>
   </section>
 </article>
+
+
+
+<section class="questions" id="questions">
+    <div class="menu_container">
+      <div class=menu_container_circle>
+        <div class="orange-circle">
+        </div>
+        <h5>Вопросы</h5>
+      </div>
+      <h1>...</h1>
+      <div class="orange-line">
+      </div>
+    </div>
+    <div class="questions_text">
+      <ol>
+        <li>Проблема с хэдером: картинка на фоне не растягивается на всю длину окна. Возможно, я не совсем поняла логику того, как это должно выглядеть (из-за того, что я уменьшила body, я не могу выровнять картинку по ширине, был вариант весь текст записать в отдельный блок и задать отступы этому блоку, но это выглядит как костыль, плюс черная рамка вокруг body заходит под картинку).</li>
+        <li>Выравнивание заголовков. Коротко: всё съехало. Длинно: В тех блоках, где есть картинка, в образце заголовки прижаты к левому краю, т.е. к самой картинке, причем прижат весь заголовок полностью, и выравнивания по центру нет. Вопрос в том, как мне поступить со всеми этими блоками заголовков, должно ли быть автоматическое выравнивание для тех блоков, где есть картинки, или для этих блоков все задается отдельно, т.е. у меня должно быть два разных блока заголовков для тех, кто по центру, и для тех, кто прижат к картинке? </li>
+        <li>Вопрос по поводу съезжания содержимого блоков. Когда писала код, много раз сталкивалась с тем, что текст соседних sections залезает на тот блок, с которым я работаю. Хорошо это видно как раз на секциях вопросов и информации обо мне, где заголовок залезает в предыдущий раздел из-за того, что там мало содержимого, а текст обтекает картинку. Можно ли каким-то образом ограничить обтекание текстом в пределах конкретного блока? Не хочется писать больше текста в блок только для того, чтобы это исправить.</li>
+        <li>Сжатие окна. Хотела спросить про то, как должно вести себя содержимое блоков, когда мы изменяем размер окна. Возможно, немного заглядываю вперед, потому что в том портфолио из figma, которое Вы мне присылали, третье изображение как раз сжатая или мобильная версия (а я пока делала только первое изображение). Но все же интересно, каким образом задается такое сжатие?</li>
+        <li>По поводу фигур и подобных конструкций. Я задавала все фигуры (кружки и линии) с помощью div-ов. Возник такой вопрос, правильный ли это способ, и какие варианты создания фигур есть еще? Например, если мы говорим про реальные рабочие проекты, как подобные рисунки прописывать (если в этих проектах они вообще присутствуют)? Есть ли вариант использовать компьютерную графику, или все подобные фигуры прописываются как изображения, или есть варианты задания div-ами более сложных объектов (например, звезда, объемные фигуры и т.д.).</li>
+        <li>Маленький вопрос о блоках Про меня и Опыт. Оранжевые кружки в нем сжались. Я полагаю, это из-за того, что элементы в блоке конфликтуют и друг на друга накладываются, и нужно переработать логику блока. Но может все исправляется гораздо проще?</li>
+      </ol>
+    </div>
+    
+  </section>
+
 </body>
 </html>
