--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="menu_container">
                 <div class="menu_container_title">
                 </div>
-                <h3 class="main_h3">Меня зовут Анастасия Мухина</h3>
+                <h4 class="main_h4">Меня зовут Анастасия Мухина</h4>
             </div>
             <h1 class="main_h1">Я web-разработчик из города Саратов</h1>
             <nav class="main_nav">
@@ -41,42 +41,56 @@
 
 
     <article class="all-info">
+        <!-----------Блок Про меня------------>
         <section class="about-me" id="about-me">
             <img src="src/Photo/pic1.jpg" alt="Красивая картинка 1" class="main_img">
             <div class="wrapper">
-                <div class="menu_container">
-                    <div class="menu_container_circle">
-                        <div class="orange-circle">
+
+                <!----------Заголовок----------->
+                <div class="about-me_menu">
+                    <div class="about-me_menu_container">
+                        <div class="about-me_circle">
                         </div>
-                        <h5>Про меня</h5>
+                        <h4 class="about-me_menu_h4">Про меня</h4>
                     </div>
                     <h2>Меня зовут Анастасия</h2>
                     <div class="orange-line">
                     </div>
                 </div>
-                <!-------
+                
+                <!---------------Информация----------------->
                 <div class="about-me_main-info">
-                    <p>Меня зовут Мухина Анастасия Алексеевна, мне 21 год, дата рождения: 28.01.2001. Адрес проживания: г. Саратов, ул. Мамонтовой, д.5, кв. 32.</p>
+                    <p class="main-info_p">Меня зовут Мухина Анастасия Алексеевна, мне 21 год, дата рождения: 28.01.2001. Адрес проживания: г. Саратов, ул. Мамонтовой, д.5, кв. 32.</p>
+                    <p class="main-info_qualities_p">Личные качества: oтветственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту, организованность.</p>
                 </div>
+
                 <div class="about-me_work-info">
-                    <div class="container">
-                        <div class="orange-circle">
+                    <div class="work-info_container">
+                        <div class="work-info_circle">
                         </div>
-                        <div class="container_text">
-                            <h3 class="qualities_h3">Личные качества</h3>
-                            <p class="qualities_p">Ответственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту, организованность.</p>
+                        <div class="work-info_container_text">
+                            <h4 class="web_h4">Web-разработка</h4>
+                            <p class="web_p">Это процедура создания WEB-приложения или WEB-сайта.</p>
                         </div>
                     </div>
-                    <div class="container">
-                        <div class="orange-circle">
+                    <div class="work-info_container_1">
+                        <div class="work-info_circle_1">
                         </div>
-                        <div class="container_text">
-                            <h3 class="hobby_h3">Хобби</h3>
-                            <p class="hobby_p">В свободное время я занимаюсь плаванием и танцами, развожу домашние растения, увлекаюсь настольными и компьютерными играми, в холодное время года катаюсь на лыжах и сноуборде.</p>
+                        <div class="wokr-info_container_text">
+                            <h4 class="app-dev_h4">Разработка приложений</h4>
+                            <p class="app-dev_p">Это процесс, при котором приложения разрабатываются для небольших портативных устройств.</p>
+                        </div>
+                    </div>
+                    <div class="work-info_container">
+                        <div class="work-info_circle">
+                        </div>
+                        <div class="work-info_container_text">
+                            <h4 class="ux-ui_h4">UI/UX Design</h4>
+                            <p class="ux-ui_p"> UX/UI-дизайн - это проектирование пользовательских интерфейсов, их внешнего вида и удобства.</p>
                         </div>
                     </div>
                 </div>
-                ----->
+                
             </div>
         </section>
 
