--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main_media">
             <div class="main_media_images">
                 <img src="src/Icons/Github.jpg" alt="Github" class="little-icon">
-                <img src="src/Icons/Instagram.jpg" alt="I" class="little-icon"/>
+                <img src="src/Icons/instagram.jpg" alt="Instagram" class="little-icon"/>
                 <img src="src/Icons/Facebook.jpg" alt="Facebook" class="little-icon"/>
             </div>
             <div class="vertical_black-line">
