--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="main">
+
         <!-----Левый блок Социальные сети------->
         <div class="main_media">
             <div class="main_media_images">
@@ -36,6 +37,13 @@
                 <a href="#portfolio" class="main_portfolio"><b>Портфолио</b></a>
                 <a href="#about-me" class="main_about-me"><b>Про меня</b></a>
             </nav>
+        </div>
+
+        <!------Правый блок - три черные полосы------------------->
+        <div class="lines">
+            <div class="first-black-line"></div>
+            <div class="second-black-line"></div>
+            <div class="third-black-line"></div>
         </div>
     </header>
 
