--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                     <div class="work-info_container">
                         <div class="work-info_circle">
                         </div>
+                        <div class="web_img">
+                            <img src="src/Icons/Web.jpg" alt="web" class="work-info_img">
+                        </div>
                         <div class="work-info_container_text">
                             <h4 class="web_h4">Web-разработка</h4>
                             <p class="web_p">Это процедура создания WEB-приложения или WEB-сайта.</p>
@@ -84,6 +87,9 @@
                     <div class="work-info_container_1">
                         <div class="work-info_circle_1">
                         </div>
+                        <div class="app-dev_img">
+                            <img src="src/Icons/app-dev.jpg" alt="app-dev" class="work-info_img_1">
+                        </div>
                         <div class="wokr-info_container_text">
                             <h4 class="app-dev_h4">Разработка приложений</h4>
                             <p class="app-dev_p">Это процесс, при котором приложения разрабатываются для небольших портативных устройств.</p>
@@ -91,6 +97,9 @@
                     </div>
                     <div class="work-info_container">
                         <div class="work-info_circle">
+                        </div>
+                        <div class="ux-ui_img">
+                            <img src="src/Icons/ux-ui.jpg" alt="UX/UI" class="work-info_img">
                         </div>
                         <div class="work-info_container_text">
                             <h4 class="ux-ui_h4">UI/UX Design</h4>
