--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="work-info_circle">
                         </div>
                         <div class="web_img">
-                            <img src="src/Icons/Web.jpg" alt="web" class="work-info_img">
+                            <img src="src/Icons/Web1.jpg" alt="web" class="work-info_img">
                         </div>
                         <div class="work-info_container_text">
                             <h4 class="web_h4">Web-разработка</h4>
@@ -88,7 +88,7 @@
                         <div class="work-info_circle_1">
                         </div>
                         <div class="app-dev_img">
-                            <img src="src/Icons/app-dev.jpg" alt="app-dev" class="work-info_img_1">
+                            <img src="src/Icons/app-dev1.jpg" alt="app-dev" class="work-info_img_1">
                         </div>
                         <div class="wokr-info_container_text">
                             <h4 class="app-dev_h4">Разработка приложений</h4>
@@ -99,7 +99,7 @@
                         <div class="work-info_circle">
                         </div>
                         <div class="ux-ui_img">
-                            <img src="src/Icons/ux-ui.jpg" alt="UX/UI" class="work-info_img">
+                            <img src="src/Icons/ux-ui1.jpg" alt="UX/UI" class="work-info_img_2">
                         </div>
                         <div class="work-info_container_text">
                             <h4 class="ux-ui_h4">UI/UX Design</h4>
