--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
 
         <!-------Главный заголовок сайта--------->
         <div class="main_info">
-            <div class="menu_container">
-                <div class="menu_container_title">
-                </div>
-                <h4 class="main_h4">Меня зовут Анастасия Мухина</h4>
-            </div>
+            <h4 class="main_h4">Меня зовут Анастасия Мухина</h4>
             <h1 class="main_h1">Я web-разработчик из города Саратов</h1>
             <nav class="main_nav">
                 <a href="#portfolio" class="main_portfolio"><b>Портфолио</b></a>
@@ -41,9 +37,7 @@
 
         <!------Правый блок - три черные полосы------------------->
         <div class="lines">
-            <div class="first-black-line"></div>
-            <div class="second-black-line"></div>
-            <div class="third-black-line"></div>
+            <div class="black-line"></div>
         </div>
     </header>
 
@@ -57,8 +51,6 @@
                 <!----------Заголовок----------->
                 <div class="about-me_menu">
                     <div class="about-me_menu_container">
-                        <div class="about-me_circle">
-                        </div>
                         <h4 class="about-me_menu_h4">Про меня</h4>
                     </div>
                     <h2>Меня зовут Анастасия</h2>
