--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>CV</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="no_style.css" tape="text/css/">
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <!----Стили для текста------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,27 +13,25 @@
 
 <body>
     <header class="main">
-
-        <!-----Левый блок Социальные сети------->
-        <div class="main_media">
-            <div class="main_media_images">
-                <img src="src/Icons/Github.jpg" alt="Github" class="little-icon">
-                <img src="src/Icons/Instagram.jpg" alt="Instagram" class="little-icon">
-                <img src="src/Icons/Facebook.jpg" alt="Facebook" class="little-icon">
+        <div class="main_div">
+            
+            <!-----Левый блок Социальные сети------->
+            <div class="main_media">
+                <p class="main_media_p"><b>Социальные сети</b></p>
+                <img src="src/Icons/Github.svg" alt="Github" class="little-icon">
+                <img src="src/Icons/Instagram.svg" alt="Instagram" class="little-icon">
+                <img src="src/Icons/Facebook.svg" alt="Facebook" class="little-icon">
             </div>
-            <div class="vertical_black-line">
-            </div>
-            <p class="main_media_p"><b>Социальные сети</b></p>
-        </div>
 
-        <!-------Главный заголовок сайта--------->
-        <div class="main_info">
-            <h4 class="main_h4">Меня зовут Анастасия Мухина</h4>
-            <h1 class="main_h1">Я web-разработчик из города Саратов</h1>
-            <nav class="main_nav">
-                <a href="#portfolio" class="main_portfolio"><b>Портфолио</b></a>
-                <a href="#about-me" class="main_about-me"><b>Про меня</b></a>
-            </nav>
+            <!-------Главный заголовок сайта--------->
+            <div class="main_info">
+                <h4 class="main_h4">Меня зовут Анастасия Мухина</h4>
+                <h1 class="main_h1">Я web-разработчик из города Саратов</h1>
+                <nav class="main_nav">
+                    <a href="#portfolio" class="main_portfolio"><b>Портфолио</b></a>
+                    <a href="#about-me" class="main_about-me"><b>Про меня</b></a>
+                </nav>
+            </div>
         </div>
 
         <!------Правый блок - три черные полосы------------------->
@@ -50,9 +49,7 @@
 
                 <!----------Заголовок----------->
                 <div class="about-me_menu">
-                    <div class="about-me_menu_container">
-                        <h4 class="about-me_menu_h4">Про меня</h4>
-                    </div>
+                    <h4 class="about-me_menu_h4">Про меня</h4>
                     <h2>Меня зовут Анастасия</h2>
                     <div class="orange-line">
                     </div>
@@ -66,10 +63,8 @@
 
                 <div class="about-me_work-info">
                     <div class="work-info_container">
-                        <div class="work-info_circle">
-                        </div>
                         <div class="web_img">
-                            <img src="src/Icons/Web1.jpg" alt="web" class="work-info_img">
+                            <img src="src/Icons/Web.svg" alt="web" class="work-info_img">
                         </div>
                         <div class="work-info_container_text">
                             <h4 class="web_h4">Web-разработка</h4>
@@ -77,21 +72,17 @@
                         </div>
                     </div>
                     <div class="work-info_container_1">
-                        <div class="work-info_circle_1">
-                        </div>
                         <div class="app-dev_img">
-                            <img src="src/Icons/app-dev1.jpg" alt="app-dev" class="work-info_img_1">
+                            <img src="src/Icons/app-dev.svg" alt="app-dev" class="work-info_img_1">
                         </div>
-                        <div class="wokr-info_container_text">
+                        <div class="work-info_container_text">
                             <h4 class="app-dev_h4">Разработка приложений</h4>
                             <p class="app-dev_p">Это процесс, при котором приложения разрабатываются для небольших портативных устройств.</p>
                         </div>
                     </div>
                     <div class="work-info_container">
-                        <div class="work-info_circle">
-                        </div>
                         <div class="ux-ui_img">
-                            <img src="src/Icons/ux-ui1.jpg" alt="UX/UI" class="work-info_img_2">
+                            <img src="src/Icons/ux-ui.svg" alt="UX/UI" class="work-info_img_2">
                         </div>
                         <div class="work-info_container_text">
                             <h4 class="ux-ui_h4">UI/UX Design</h4>
