--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
                 </div>
             </div>
 
+            <!--------------Нижние блоки со шкалой процентов---------------------->
+
             <div class="skills_scale">
                 <div class="sites">
                     <h5 class="sites_h5">Создание сайтов</h5>
@@ -235,6 +237,11 @@
                 </div>
             </div>
         </section>
+
+        <section class="questions">
+            <p>Вопрос по поводу шести нижних блоков со шкалой процентов. Я делала их через before и after, но может быть, есть возможность сделать их по-другому, с помощью специальных тегов? Можно ли настроить автозаполнение шкалы в зависимости от процента, который ей задан?</p>
+        </section>
+
 
         <!---------------
 
