--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
         <section class="questions">
             <p>1. Вопрос по поводу шести нижних блоков со шкалой процентов. Я делала их через before и after, но может быть, есть возможность сделать их по-другому, с помощью специальных тегов? Можно ли настроить автозаполнение шкалы в зависимости от процента, который ей задан?</p>
-            <p>2. Небольшой вопрос по поводу гита, у меня часто возникает проблема, что изменения, которые я загрузила, какое-то время визуально на сайте не отображаются, приходится ждать или загружать стили несколько раз. От чего это зависит, нужно в настройках что-то изменить?</p>
+            <p>2. Небольшой вопрос по поводу гита, у меня часто возникает проблема, что изменения, которые я загрузила, какое-то время визуально на сайте не отображаются, приходится ждать или загружать файлы несколько раз. От чего это зависит, нужно в настройках что-то изменить?</p>
         </section>
 
 
