--- a/index.html
+++ b/index.html
@@ -350,6 +350,12 @@
             </div>
         </section>
 
+
+        <section class="questions">
+            <h2>Вопросы и уточнения</h2>
+            <p>1. Нашла, как сделать поля в последнем разделе. Встретила также вариант, где label инпута сначала прописывается внутри него, а при нажатии переходит вверх (в позицию как на исходном макете). Я не стала отходить от оригинала и ограничилась просто надписями. Стоит ли сделать вот этот второй вариант, или текущего функционала достаточно?</p>
+        </section>
+
 </article>
 
 </body>
