--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
         <section class="questions">
             <h2>Вопросы и уточнения</h2>
             <p>1. Нашла, как сделать поля в последнем разделе. Встретила также вариант, где label инпута сначала прописывается внутри него, а при нажатии переходит вверх (в позицию как на исходном макете). Я не стала отходить от оригинала и ограничилась просто надписями. Стоит ли сделать вот этот второй вариант, или текущего функционала достаточно?</p>
+            <p>Оставлю ссылку:</p>
+            <a href="https://itchief.ru/examples/lab.php?topic=html-and-css&file=input-text-06">ПРИМЕР</a>
         </section>
 
 </article>
