--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>CV</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="no_style.css" tape="text/css/">
+    <link rel="stylesheet" href="no_style.css" tape="text/css"/>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="stylesheet" href="media_style.css" type="text/css"/>
+
     <!----Стили для текста------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,11 +34,11 @@
                     <a href="#about-me" class="main_about-me"><b>Про меня</b></a>
                 </nav>
             </div>
-        </div>
 
-        <!----------Правый блок - три черные полосы------------------->
-        <div class="lines">
-            <div class="black-line"></div>
+            <!----------Правый блок - три черные полосы------------------->
+            <div class="lines">
+                <div class="black-line"></div>
+            </div>
         </div>
     </header>
 
@@ -56,7 +58,7 @@
                 <!---------------Информация----------------->
                 <div class="about-me_main-info">
                     <p class="main-info_p">Меня зовут Мухина Анастасия Алексеевна, мне 21 год, дата рождения: 28.01.2001. Адрес проживания: г. Саратов, ул. Мамонтовой, д.5, кв. 32.</p>
-                    <p class="main-info_qualities_p">Личные качества: oтветственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту, организованность.</p>
+                    <p class="main-info_qualities_p">Личные качества: oтветственность, умение работать в команде, стрессоустойчивость, стремление к карьерному росту.</p>
                 </div>
 
                 <div class="about-me_work-info">
@@ -87,8 +89,7 @@
                             <p class="ux-ui_p"> UX/UI-дизайн - это проектирование пользовательских интерфейсов, их внешнего вида и удобства.</p>
                         </div>
                     </div>
-                </div>
-                
+                </div>  
             </div>
         </section>
 
@@ -349,15 +350,6 @@
                 </div>
             </div>
         </section>
-
-
-        <section class="questions">
-            <h2>Вопросы и уточнения</h2>
-            <p>1. Нашла, как сделать поля в последнем разделе. Встретила также вариант, где label инпута сначала прописывается внутри него, а при нажатии переходит вверх (в позицию как на исходном макете). Я не стала отходить от оригинала и ограничилась просто надписями. Стоит ли сделать вот этот второй вариант, или текущего функционала достаточно?</p>
-            <p>Оставлю ссылку:</p>
-            <a href="https://itchief.ru/examples/lab.php?topic=html-and-css&file=input-text-06">ПРИМЕР</a>
-        </section>
-
 </article>
 
 </body>
