--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>CV</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="no_style.css" tape="text/css"/>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="stylesheet" href="media_style.css" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/no_style.css" tape="text/css"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="css/media_style.css" type="text/css"/>
 
     <!----Стили для текста------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
