--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@
                 <img src="src/Photo/bread.png" alt="bread" class="portfolio_works_img bread">
                 <img src="src/Photo/ipad.png" alt="ipad" class="portfolio_works_img ipad">
                 <img src="src/Photo/mac.png" alt="mac" class="portfolio_works_img mac">
+                <img src="src/Photo/mac_1.png" alt="mac_1" class="portfolio_works_img mac_1">
                 <img src="src/Photo/plans.png" alt="plans" class="portfolio_works_img plans">
+                <img src="src/Photo/plans_1.png" alt="plans_1" class="portfolio_works_img plans_1">
             </div>
         </section>  
 
@@ -350,6 +352,15 @@
                     <a href="#" class="contacts_button_send"><b>Отправить сообщение</b></a>
                 </div>
             </div>
+        </section>
+
+
+        <section class="questions">
+            <h2 class="questions_h2">Вопросы</h2>
+            <h4 class="questions_h4">Вопросы про max-width: 850px</h4>
+            <p>1. Первый вопрос по поводу хэдера: фоновое изображение сейчас растягивается под размеры экрана неправильно, но я не совсем понимаю, как это поправить.</p>
+            <p>2. Второй вопрос по поводу хэдера: левое меню с иконками соцсетей в версии на телефоне отсутствует. 1) Как мне убрать этот блок, он должен быть за границами экрана? Или поместить его внизу хэдера? 2) Как поступить с этим блоком на ширине от 850 до 500? Он вроде бы вписывается, но из-за него соседний заголовок смещается на изображение, и, может, логичнее поступить с ним как на телефоне (убрать или сместить)?</p>
+            <p>3. Вопрос про блок Опыт: я настроила перенос внутренних блоков, он происходит внутри промежутка 500-850px (на ширине 787px), и когда блоки переносятся и выстраиваются друг под другом, по сторонам остается много свободного места. Мне стоит изначально сделать их шире (на всю ширину экрана), или наоборот ужать, чтобы они доходили до размера телефона (условно 500px) и на следующем media сразу переносились?</p>
         </section>
 </article>
 
