--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <article class="all-info">
         <!-----------Блок Про меня------------>
         <section class="about-me" id="about-me">
-            <img src="src/Photo/pic1.png" alt="Красивая картинка 1" class="main_img">
+            <img src="src/Photo/pic1.png" alt="Красивая картинка 1" class="main_img start_img">
             <div class="wrapper">
 
                 <!-------------Заголовок-------------->
@@ -107,7 +107,7 @@
             <div class="education-work">
 
                 <!----------Блок Образование----------->
-                <div class="experience_education">
+                <div class="experience_education vertical_line">
                     <h4 class="exp_ed_h4">Образование</h4>
                     <div class="education_info">
                         <ol class="education_ol">
@@ -132,7 +132,7 @@
                 </div>
 
                 <!----------Блок Опыт работы------------->
-                <div class="experience_work">
+                <div class="experience_work vertical_line">
                     <h4 class="exp_work_h4">Опыт работы</h4>
                     <div class="work_info">
                         <ol class="work_ol">
@@ -319,7 +319,7 @@
  <!----------------Блок Контакты--------------------------->
 
         <section class="contacts" id="contacts">
-            <img src="src/Photo/pic1.png" alt="Красивая картинка 2" class="main_img">
+            <img src="src/Photo/pic1.png" alt="Красивая картинка 2" class="main_img end_img">
             <div class="contacts_wrapper">
                 <div class="contacts_menu">
                     <h4 class="contacts_menu_h4">Контакты</h4>
@@ -359,8 +359,11 @@
             <h2 class="questions_h2">Вопросы</h2>
             <h4 class="questions_h4">Вопросы про max-width: 850px</h4>
             <p>1. Первый вопрос по поводу хэдера: фоновое изображение сейчас растягивается под размеры экрана неправильно, но я не совсем понимаю, как это поправить.</p>
-            <p>2. Второй вопрос по поводу хэдера: левое меню с иконками соцсетей в версии на телефоне отсутствует. 1) Как мне убрать этот блок, он должен быть за границами экрана? Или поместить его внизу хэдера? 2) Как поступить с этим блоком на ширине от 850 до 500? Он вроде бы вписывается, но из-за него соседний заголовок смещается на изображение, и, может, логичнее поступить с ним как на телефоне (убрать или сместить)?</p>
+            <p>2. Второй вопрос по поводу хэдера: левое меню с иконками соцсетей в версии на телефоне отсутствует. Как поступить с этим блоком на ширине от 850 до 500? Он вроде бы вписывается, но из-за него соседний заголовок смещается на изображение, и, может, логичнее поступить с ним как на телефоне (убрать совсем)?</p>
             <p>3. Вопрос про блок Опыт: я настроила перенос внутренних блоков, он происходит внутри промежутка 500-850px (на ширине 787px), и когда блоки переносятся и выстраиваются друг под другом, по сторонам остается много свободного места. Мне стоит изначально сделать их шире (на всю ширину экрана), или наоборот ужать, чтобы они доходили до размера телефона (условно 500px) и на следующем media сразу переносились?</p>
+            <h4 class="questions_h4_2">Вопросы про max-width: 500px</h4>
+            <p>1. Все еще остался вопрос, что делать с фоновым изображением :(</p>
+            <p>2. При определенной ширине экрана некоторые заголовки разделов начинают выстраиваться в две строки, из-за этого оранжевые линии под ними залезают на текст этих заголовков. Как их можно поправить?</p>
         </section>
 </article>
 
