--- a/index.html
+++ b/index.html
@@ -336,15 +336,15 @@
                 <!-----------Текстовые поля для ввода информации------------------->
                 <div class="form">
                     <div class="name_div floating">
-                        <input class="name_input" type="username" id="username" name="username">
+                        <input class="name_input" type="username" id="username" name="username" placeholder="#">
                         <label class="name_label" for="username">Ваше имя</label>
                     </div>
                     <div class="mail_div floating">
-                        <input class="mail_input" type="mail" id="mail" name="mail">
+                        <input class="mail_input" type="mail" id="mail" name="mail" placeholder="#">
                         <label class="mail_label" for="mail">Ваша почта</label>
                     </div>
                     <div class="message_div floating">
-                        <input class="message_input" type="message" id="message" name="message">
+                        <input class="message_input" type="message" id="message" name="message" placeholder="#">
                         <label class="message_label" for="message">Ваше сообщение</label>
                     </div>
                 </div>
@@ -352,18 +352,6 @@
                     <a href="#" class="contacts_button_send"><b>Отправить сообщение</b></a>
                 </div>
             </div>
-        </section>
-
-
-        <section class="questions">
-            <h2 class="questions_h2">Вопросы</h2>
-            <h4 class="questions_h4">Вопросы про max-width: 850px</h4>
-            <p>1. Первый вопрос по поводу хэдера: фоновое изображение сейчас растягивается под размеры экрана неправильно, но я не совсем понимаю, как это поправить.</p>
-            <p>2. Второй вопрос по поводу хэдера: левое меню с иконками соцсетей в версии на телефоне отсутствует. Как поступить с этим блоком на ширине от 850 до 500? Он вроде бы вписывается, но из-за него соседний заголовок смещается на изображение, и, может, логичнее поступить с ним как на телефоне (убрать совсем)?</p>
-            <p>3. Вопрос про блок Опыт: я настроила перенос внутренних блоков, он происходит внутри промежутка 500-850px (на ширине 787px), и когда блоки переносятся и выстраиваются друг под другом, по сторонам остается много свободного места. Мне стоит изначально сделать их шире (на всю ширину экрана), или наоборот ужать, чтобы они доходили до размера телефона (условно 500px) и на следующем media сразу переносились?</p>
-            <h4 class="questions_h4_2">Вопросы про max-width: 500px</h4>
-            <p>1. Все еще остался вопрос, что делать с фоновым изображением :(</p>
-            <p>2. При определенной ширине экрана некоторые заголовки разделов начинают выстраиваться в две строки, из-за этого оранжевые линии под ними залезают на текст этих заголовков. Как их можно поправить?</p>
         </section>
 </article>
 
