--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
 </head>
 
 <body>
-    <header class="main">
+    <!---------------Блок Навигация-------------------->
 
-        <!---------------Блок Меню-------------------->
-
-        <div class="navigation">
-            <div class="cross">
-                <div class="cross_black-line-first"></div>
-                <div class="cross_black-line-second"></div>
-            </div>
-            <nav class="nav-menu">
-                <a href="#about-me" class="nav-menu_about-me">ПРО МЕНЯ</a>
-                <a href="#experience" class="nav-menu_experience">МОЙ ОПЫТ</a>
-                <a href="#skills" class="nav-menu_skills">МОИ НАВЫКИ</a>
-                <a href="#portfolio" class="nav-menu_portfolio">МОИ РАБОТЫ</a>
-                <a href="#price-list" class="nav-menu_price">ПРАЙС-ЛИСТ</a>
-                <a href="#contacts" class="nav-menu_contacts">КОНТАКТЫ</a>
-            </nav>
-            <div class="nav-media">
-                <img src="src/Icons/Small/Facebook.svg" alt="Facebook" class="little-icon">
-                <img src="src/Icons/Small/Instagram.svg" alt="Instagram" class="little-icon">
-                <img src="src/Icons/Small/Github.svg" alt="Github" class="little-icon">
-            </div>
+    <div class="navigation">
+        <div class="cross">
+            <div class="cross_black-line-first"></div>
+            <div class="cross_black-line-second"></div>
         </div>
-
+        <nav class="nav-menu">
+            <a href="#about-me" class="nav-menu_about-me">ПРО МЕНЯ</a>
+            <a href="#experience" class="nav-menu_experience">МОЙ ОПЫТ</a>
+            <a href="#skills" class="nav-menu_skills">МОИ НАВЫКИ</a>
+            <a href="#portfolio" class="nav-menu_portfolio">МОИ РАБОТЫ</a>
+            <a href="#price-list" class="nav-menu_price">ПРАЙС-ЛИСТ</a>
+            <a href="#contacts" class="nav-menu_contacts">КОНТАКТЫ</a>
+        </nav>
+        <div class="nav-media">
+            <img src="src/Icons/Small/Facebook.svg" alt="Facebook" class="little-icon">
+            <img src="src/Icons/Small/Instagram.svg" alt="Instagram" class="little-icon">
+            <img src="src/Icons/Small/Github.svg" alt="Github" class="little-icon">
+        </div>
+    </div>
+    
+    <header class="main">
         <div class="main_div">
             <!-----Левый блок Социальные сети------->
             <div class="main_media">
